update the detector for the negative xhpi

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,26 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "c2d8601f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: gemmi in /y/people/bql506/miniconda3/envs/xhpi_env/lib/python3.11/site-packages (0.7.3)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "pip install --upgrade gemmi\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "bbfa8994",
    "metadata": {},
    "outputs": [
@@ -64,23 +45,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "1937c4a0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[]"
+       "['C:/Users/Sean/Desktop/xhpi_for_database/test_addH/test_addH\\\\d8\\\\5d8v.cif.gz',\n",
+       " 'C:/Users/Sean/Desktop/xhpi_for_database/test_addH/test_addH\\\\e6\\\\6e6o.cif.gz',\n",
+       " 'C:/Users/Sean/Desktop/xhpi_for_database/test_addH/test_addH\\\\ni\\\\3nir.cif.gz',\n",
+       " 'C:/Users/Sean/Desktop/xhpi_for_database/test_addH/test_addH\\\\nw\\\\5nw3.cif.gz',\n",
+       " 'C:/Users/Sean/Desktop/xhpi_for_database/test_addH/test_addH\\\\r6\\\\1r6j.cif.gz',\n",
+       " 'C:/Users/Sean/Desktop/xhpi_for_database/test_addH/test_addH\\\\s2\\\\6s2m.cif.gz',\n",
+       " 'C:/Users/Sean/Desktop/xhpi_for_database/test_addH/test_addH\\\\uc\\\\1ucs.cif.gz',\n",
+       " 'C:/Users/Sean/Desktop/xhpi_for_database/test_addH/test_addH\\\\us\\\\1us0.cif.gz',\n",
+       " 'C:/Users/Sean/Desktop/xhpi_for_database/test_addH/test_addH\\\\vb\\\\2vb1.cif.gz',\n",
+       " 'C:/Users/Sean/Desktop/xhpi_for_database/test_addH/test_addH\\\\x2\\\\3x2m.cif.gz']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "input_directory = \"/y/people/bql506/pdb_test/pdb_test_Hadded/1a\"\n",
+    "input_directory = \"C:/Users/Sean/Desktop/xhpi_for_database/test_addH/\"\n",
     "\n",
     "gz_files = []\n",
     "for dirpath, _, filenames in os.walk(input_directory):\n",
@@ -93,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "id": "f53e271e",
    "metadata": {},
    "outputs": [
@@ -101,15 +91,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing files: 100%|██████████| 10/10 [00:00<00:00, 10.94it/s]"
+      "Processing files: 100%|██████████| 10/10 [00:00<00:00, 49.91it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Detected 205 XH-π interactions in total.\n",
-      "The result has been saved to /y/people/bql506/pdb_test/pdb_test_Hadded/xhpi_output.csv\n"
+      "Detected 115 XH-π interactions in total.\n",
+      "The result has been saved to C:/Users/Sean/Desktop/xhpi_for_database/test_addH/xhpi_output.csv\n"
      ]
     },
     {
@@ -166,6 +156,47 @@
     "else:\n",
     "    print(\"No interactions were found to save.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "dc82fe25",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'pdb_name': '3x2m',\n",
+       "  'resolution': 0.64,\n",
+       "  'mean_b_factor': np.float64(3.801000142097473),\n",
+       "  'pi_chain_name': 'A',\n",
+       "  'pi_residue_number': 167,\n",
+       "  'pi_residue_name': 'TRP_A',\n",
+       "  'pi_center_array': array([ 0.6796, -4.4096, -6.9434]),\n",
+       "  'pi_normal_vector': array([-0.45322016,  0.25339462, -0.85462428]),\n",
+       "  'pi_b_factor': np.float64(3.59200005531311),\n",
+       "  'X_chain_name': 'A',\n",
+       "  'X_residue_num': 7,\n",
+       "  'X_residue_name': 'GLN',\n",
+       "  'X_element_name': 'C',\n",
+       "  'X_atom_name': 'CB',\n",
+       "  'X_pos': array([  0.251,  -4.304, -10.764]),\n",
+       "  'X_b_factor': 4.010000228881836,\n",
+       "  'H_atom_name': 'HB3',\n",
+       "  'H_pos': array([ 0.44179813, -4.49315144, -9.82154692]),\n",
+       "  'X_to_pi_center_distance': np.float64(3.8460152989815306),\n",
+       "  'XH_picenterAngle': np.float64(165.5723914428692),\n",
+       "  'XPCN_angle': np.float64(24.98192719385196)}]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "found_interactions"
+   ]
   }
  ],
  "metadata": {
@@ -184,7 +215,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.9.24"
   }
  },
  "nbformat": 4,
