debug the xhpi lable

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "bbfa8994",
    "metadata": {},
    "outputs": [
@@ -18,6 +18,25 @@
       " OO   OO     HH   HH             PP         II \n",
       "SS     SS    HH   HH             PP         II \n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['structures/test_addH/test_addH/ni/3nir.cif.gz',\n",
+       " 'structures/test_addH/test_addH/uc/1ucs.cif.gz',\n",
+       " 'structures/test_addH/test_addH/x2/3x2m.cif.gz',\n",
+       " 'structures/test_addH/test_addH/s2/6s2m.cif.gz',\n",
+       " 'structures/test_addH/test_addH/e6/6e6o.cif.gz',\n",
+       " 'structures/test_addH/test_addH/r6/1r6j.cif.gz',\n",
+       " 'structures/test_addH/test_addH/vb/2vb1.cif.gz',\n",
+       " 'structures/test_addH/test_addH/us/1us0.cif.gz',\n",
+       " 'structures/test_addH/test_addH/d8/5d8v.cif.gz',\n",
+       " 'structures/test_addH/test_addH/nw/5nw3.cif.gz']"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -40,37 +59,9 @@
     "    'HIS': ['CE1', 'ND1', 'NE2', 'CG', 'CD2']}\n",
     "trp_A_dict = {\n",
     "    'TRP': ['CD1', 'CD2', 'NE1', 'CG', 'CE2']}\n",
-    "printer.print_xhpi()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "1937c4a0",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['C:/Users/Sean/Desktop/xhpi_for_database/test_addH/test_addH\\\\d8\\\\5d8v.cif.gz',\n",
-       " 'C:/Users/Sean/Desktop/xhpi_for_database/test_addH/test_addH\\\\e6\\\\6e6o.cif.gz',\n",
-       " 'C:/Users/Sean/Desktop/xhpi_for_database/test_addH/test_addH\\\\ni\\\\3nir.cif.gz',\n",
-       " 'C:/Users/Sean/Desktop/xhpi_for_database/test_addH/test_addH\\\\nw\\\\5nw3.cif.gz',\n",
-       " 'C:/Users/Sean/Desktop/xhpi_for_database/test_addH/test_addH\\\\r6\\\\1r6j.cif.gz',\n",
-       " 'C:/Users/Sean/Desktop/xhpi_for_database/test_addH/test_addH\\\\s2\\\\6s2m.cif.gz',\n",
-       " 'C:/Users/Sean/Desktop/xhpi_for_database/test_addH/test_addH\\\\uc\\\\1ucs.cif.gz',\n",
-       " 'C:/Users/Sean/Desktop/xhpi_for_database/test_addH/test_addH\\\\us\\\\1us0.cif.gz',\n",
-       " 'C:/Users/Sean/Desktop/xhpi_for_database/test_addH/test_addH\\\\vb\\\\2vb1.cif.gz',\n",
-       " 'C:/Users/Sean/Desktop/xhpi_for_database/test_addH/test_addH\\\\x2\\\\3x2m.cif.gz']"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "input_directory = \"C:/Users/Sean/Desktop/xhpi_for_database/test_addH/\"\n",
+    "printer.print_xhpi()\n",
+    "\n",
+    "input_directory = \"structures/test_addH\"\n",
     "\n",
     "gz_files = []\n",
     "for dirpath, _, filenames in os.walk(input_directory):\n",
@@ -83,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "f53e271e",
    "metadata": {},
    "outputs": [
@@ -91,22 +82,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing files: 100%|██████████| 10/10 [00:00<00:00, 49.91it/s]"
+      "Processing files: 100%|██████████| 10/10 [00:00<00:00, 29.18it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Detected 115 XH-π interactions in total.\n",
-      "The result has been saved to C:/Users/Sean/Desktop/xhpi_for_database/test_addH/xhpi_output.csv\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "Found 115 interactions meeting the XH-π criteria\n",
+      "The result has been saved to structures/test_addH/xhpi_output.csv\n"
      ]
     }
    ],
@@ -130,13 +114,11 @@
     "                    for residue in chain:\n",
     "                        \n",
     "                        if residue.name in ring_atoms_dict:\n",
-    "                            found_interactions = detect_plevin.detect_plevin(\n",
-    "                                pdb_name, resolution, model, chain, structure, residue, ring_atoms_dict)\n",
-    "                            result.extend(found_interactions)\n",
+    "                            found_interactions = detect_plevin.detect_plevin(pdb_name, resolution, model, chain, structure, residue, ring_atoms_dict)\n",
+    "                            result.extend(found_interactions)     \n",
     "\n",
     "                        if residue.name in trp_A_dict:\n",
-    "                            found_interactions = detect_plevin.detect_plevin(\n",
-    "                                pdb_name, resolution, model, chain, structure, residue, trp_A_dict)\n",
+    "                            found_interactions = detect_plevin.detect_plevin(pdb_name, resolution, model, chain, structure, residue, trp_A_dict)\n",
     "                            result.extend(found_interactions)\n",
     "\n",
     "        except Exception as e:\n",
@@ -145,7 +127,8 @@
     "        finally:\n",
     "            pbar.update(1)\n",
     "\n",
-    "print(f\"Detected {len(result)} XH-π interactions in total.\")\n",
+    "xhpi_true_count = sum(1 for interaction in result if interaction.get('xhpi') == 1)\n",
+    "print(f\"Found {xhpi_true_count} interactions meeting the XH-π criteria\")\n",
     "\n",
     "# Save the calculation results to a CSV file\n",
     "if result: # Only save if results were found\n",
@@ -159,43 +142,190 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "dc82fe25",
+   "execution_count": 12,
+   "id": "f764d3ec",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'pdb_name': '3x2m',\n",
-       "  'resolution': 0.64,\n",
-       "  'mean_b_factor': np.float64(3.801000142097473),\n",
+       "[{'pdb_name': '5nw3',\n",
+       "  'resolution': 0.59,\n",
+       "  'mean_b_factor': np.float64(2.84333332379659),\n",
        "  'pi_chain_name': 'A',\n",
-       "  'pi_residue_number': 167,\n",
-       "  'pi_residue_name': 'TRP_A',\n",
-       "  'pi_center_array': array([ 0.6796, -4.4096, -6.9434]),\n",
-       "  'pi_normal_vector': array([-0.45322016,  0.25339462, -0.85462428]),\n",
-       "  'pi_b_factor': np.float64(3.59200005531311),\n",
+       "  'pi_residue_number': 48,\n",
+       "  'pi_residue_name': 'PHE',\n",
+       "  'pi_center_array': array([11.01033333,  4.99466667,  2.31266667]),\n",
+       "  'pi_normal_vector': array([ 0.09043071,  0.8727883 , -0.4796487 ]),\n",
+       "  'pi_b_factor': np.float64(3.146666685740153),\n",
        "  'X_chain_name': 'A',\n",
-       "  'X_residue_num': 7,\n",
-       "  'X_residue_name': 'GLN',\n",
+       "  'X_residue_num': 6,\n",
+       "  'X_residue_name': 'LYS',\n",
+       "  'X_element_name': 'N',\n",
+       "  'X_atom_name': 'N',\n",
+       "  'X_pos': array([11.967,  9.186, -1.349]),\n",
+       "  'X_b_factor': 2.5399999618530273,\n",
+       "  'H_atom_name': 'H',\n",
+       "  'H_pos': array([11.4925604 ,  8.41930279, -1.49892825]),\n",
+       "  'X_to_pi_center_distance': np.float64(5.647148749590364),\n",
+       "  'XH_picenterAngle': np.float64(119.03312174362475),\n",
+       "  'XPCN_angle': np.float64(13.064803447713814)},\n",
+       " {'pdb_name': '5nw3',\n",
+       "  'resolution': 0.59,\n",
+       "  'mean_b_factor': np.float64(3.5383333762486773),\n",
+       "  'pi_chain_name': 'A',\n",
+       "  'pi_residue_number': 48,\n",
+       "  'pi_residue_name': 'PHE',\n",
+       "  'pi_center_array': array([11.01033333,  4.99466667,  2.31266667]),\n",
+       "  'pi_normal_vector': array([ 0.09043071,  0.8727883 , -0.4796487 ]),\n",
+       "  'pi_b_factor': np.float64(3.146666685740153),\n",
+       "  'X_chain_name': 'A',\n",
+       "  'X_residue_num': 29,\n",
+       "  'X_residue_name': 'PHE',\n",
+       "  'X_element_name': 'C',\n",
+       "  'X_atom_name': 'CE1',\n",
+       "  'X_pos': array([11.273,  0.855,  2.138]),\n",
+       "  'X_b_factor': 3.930000066757202,\n",
+       "  'H_atom_name': 'HE1',\n",
+       "  'H_pos': array([11.1658784 ,  1.65804433,  2.6225418 ]),\n",
+       "  'X_to_pi_center_distance': np.float64(4.151667416030976),\n",
+       "  'XH_picenterAngle': np.float64(143.51129860968786),\n",
+       "  'XPCN_angle': np.float64(32.39608214025126)},\n",
+       " {'pdb_name': '5nw3',\n",
+       "  'resolution': 0.59,\n",
+       "  'mean_b_factor': np.float64(4.198333342870076),\n",
+       "  'pi_chain_name': 'A',\n",
+       "  'pi_residue_number': 48,\n",
+       "  'pi_residue_name': 'PHE',\n",
+       "  'pi_center_array': array([11.01033333,  4.99466667,  2.31266667]),\n",
+       "  'pi_normal_vector': array([ 0.09043071,  0.8727883 , -0.4796487 ]),\n",
+       "  'pi_b_factor': np.float64(3.146666685740153),\n",
+       "  'X_chain_name': 'A',\n",
+       "  'X_residue_num': 29,\n",
+       "  'X_residue_name': 'PHE',\n",
+       "  'X_element_name': 'C',\n",
+       "  'X_atom_name': 'CZ',\n",
+       "  'X_pos': array([10.452,  0.58 ,  1.068]),\n",
+       "  'X_b_factor': 5.25,\n",
+       "  'H_atom_name': 'HZ',\n",
+       "  'H_pos': array([9.77952908, 1.19402014, 0.81920665]),\n",
+       "  'X_to_pi_center_distance': np.float64(4.620629069726328),\n",
+       "  'XH_picenterAngle': np.float64(106.36557133947949),\n",
+       "  'XPCN_angle': np.float64(44.30698640069979)},\n",
+       " {'pdb_name': '5nw3',\n",
+       "  'resolution': 0.59,\n",
+       "  'mean_b_factor': np.float64(3.3933333953221636),\n",
+       "  'pi_chain_name': 'A',\n",
+       "  'pi_residue_number': 48,\n",
+       "  'pi_residue_name': 'PHE',\n",
+       "  'pi_center_array': array([11.01033333,  4.99466667,  2.31266667]),\n",
+       "  'pi_normal_vector': array([ 0.09043071,  0.8727883 , -0.4796487 ]),\n",
+       "  'pi_b_factor': np.float64(3.146666685740153),\n",
+       "  'X_chain_name': 'A',\n",
+       "  'X_residue_num': 36,\n",
+       "  'X_residue_name': 'TRP',\n",
+       "  'X_element_name': 'C',\n",
+       "  'X_atom_name': 'CZ3',\n",
+       "  'X_pos': array([9.254, 2.866, 5.286]),\n",
+       "  'X_b_factor': 3.640000104904175,\n",
+       "  'H_atom_name': 'HZ3',\n",
+       "  'H_pos': array([9.31910081, 3.15700689, 4.39139066]),\n",
+       "  'X_to_pi_center_distance': np.float64(4.056678403160234),\n",
+       "  'XH_picenterAngle': np.float64(144.82157274456745),\n",
+       "  'XPCN_angle': np.float64(31.930665066535486)},\n",
+       " {'pdb_name': '5nw3',\n",
+       "  'resolution': 0.59,\n",
+       "  'mean_b_factor': np.float64(2.6883333524068194),\n",
+       "  'pi_chain_name': 'A',\n",
+       "  'pi_residue_number': 48,\n",
+       "  'pi_residue_name': 'PHE',\n",
+       "  'pi_center_array': array([11.01033333,  4.99466667,  2.31266667]),\n",
+       "  'pi_normal_vector': array([ 0.09043071,  0.8727883 , -0.4796487 ]),\n",
+       "  'pi_b_factor': np.float64(3.146666685740153),\n",
+       "  'X_chain_name': 'A',\n",
+       "  'X_residue_num': 5,\n",
+       "  'X_residue_name': 'CYS',\n",
+       "  'X_element_name': 'C',\n",
+       "  'X_atom_name': 'CA',\n",
+       "  'X_pos': array([12.4  ,  8.307,  0.886]),\n",
+       "  'X_b_factor': 2.2300000190734863,\n",
+       "  'H_atom_name': 'HA',\n",
+       "  'H_pos': array([11.8267217 ,  7.57569414,  0.54158053]),\n",
+       "  'X_to_pi_center_distance': np.float64(3.864984260425046),\n",
+       "  'XH_picenterAngle': np.float64(122.98967415498569),\n",
+       "  'XPCN_angle': np.float64(16.753349190041178)},\n",
+       " {'pdb_name': '5nw3',\n",
+       "  'resolution': 0.59,\n",
+       "  'mean_b_factor': np.float64(2.9783333142598467),\n",
+       "  'pi_chain_name': 'A',\n",
+       "  'pi_residue_number': 48,\n",
+       "  'pi_residue_name': 'PHE',\n",
+       "  'pi_center_array': array([11.01033333,  4.99466667,  2.31266667]),\n",
+       "  'pi_normal_vector': array([ 0.09043071,  0.8727883 , -0.4796487 ]),\n",
+       "  'pi_b_factor': np.float64(3.146666685740153),\n",
+       "  'X_chain_name': 'A',\n",
+       "  'X_residue_num': 5,\n",
+       "  'X_residue_name': 'CYS',\n",
        "  'X_element_name': 'C',\n",
        "  'X_atom_name': 'CB',\n",
-       "  'X_pos': array([  0.251,  -4.304, -10.764]),\n",
-       "  'X_b_factor': 4.010000228881836,\n",
-       "  'H_atom_name': 'HB3',\n",
-       "  'H_pos': array([ 0.44179813, -4.49315144, -9.82154692]),\n",
-       "  'X_to_pi_center_distance': np.float64(3.8460152989815306),\n",
-       "  'XH_picenterAngle': np.float64(165.5723914428692),\n",
-       "  'XPCN_angle': np.float64(24.98192719385196)}]"
+       "  'X_pos': array([11.813,  8.88 ,  2.168]),\n",
+       "  'X_b_factor': 2.809999942779541,\n",
+       "  'H_atom_name': 'HB2',\n",
+       "  'H_pos': array([11.7475179 ,  8.17814769,  2.84881967]),\n",
+       "  'X_to_pi_center_distance': np.float64(3.9700147774703995),\n",
+       "  'XH_picenterAngle': np.float64(126.22096755978647),\n",
+       "  'XPCN_angle': np.float64(27.135133377073288)},\n",
+       " {'pdb_name': '5nw3',\n",
+       "  'resolution': 0.59,\n",
+       "  'mean_b_factor': np.float64(3.3633333047231035),\n",
+       "  'pi_chain_name': 'A',\n",
+       "  'pi_residue_number': 48,\n",
+       "  'pi_residue_name': 'PHE',\n",
+       "  'pi_center_array': array([11.01033333,  4.99466667,  2.31266667]),\n",
+       "  'pi_normal_vector': array([ 0.09043071,  0.8727883 , -0.4796487 ]),\n",
+       "  'pi_b_factor': np.float64(3.146666685740153),\n",
+       "  'X_chain_name': 'A',\n",
+       "  'X_residue_num': 36,\n",
+       "  'X_residue_name': 'TRP',\n",
+       "  'X_element_name': 'C',\n",
+       "  'X_atom_name': 'CH2',\n",
+       "  'X_pos': array([10.204,  3.3  ,  6.222]),\n",
+       "  'X_b_factor': 3.5799999237060547,\n",
+       "  'H_atom_name': 'HH2',\n",
+       "  'H_pos': array([10.889534  ,  3.88319665,  5.94739881]),\n",
+       "  'X_to_pi_center_distance': np.float64(4.336468109725548),\n",
+       "  'XH_picenterAngle': np.float64(118.8950257235312),\n",
+       "  'XPCN_angle': np.float64(37.78647787676101)}]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "found_interactions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "dc82fe25",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(5.647148749590364)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "found_interactions[0][\"X_to_pi_center_distance\"]"
    ]
   }
  ],
@@ -215,7 +345,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.24"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
